--- a/src/main/resources/static/css/nav.css
+++ b/src/main/resources/static/css/nav.css
@@ -27,6 +27,11 @@ header {
     font-weight: bold;
     color: #fefefe;
 }
+.logo a,
+.logo a.active {
+    text-decoration: none;
+    color: #fefefe;
+}
 .hamburger {
     display: none;
 }
