--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <header>
-            <div class="logo">FindMyTutor</div>
+            <div class="logo"><a th:href="@{/}">Find My Tutor</a></div>
             <div class="hamburger">
                 <div class="line"></div>
                 <div class="line"></div>
@@ -22,15 +22,13 @@
             <nav class="nav-bar">
                 <ul>
                     <li>
-                        <a href="" class="active">Find My Tutor</a>
+                        <a th:href="@{/}" class="active">Find My Tutor</a>
                     </li>
-                    <li>
-                        <div sec:authorize="!isAuthenticated()" style="display: inline-block">
-                            <a href="" >Sign in</a>
-                        </div>
-                        <div sec:authorize="isAuthenticated()" style="display: inline-block">
-                            <a href="">Sign out</a>
-                        </div>
+                    <li style="display: inline-block">
+                        <a href="" sec:authorize="!isAuthenticated()">Sign in</a>
+                        <form id="signout" th:action="@{/logout}" method="post" sec:authorize="isAuthenticated()">
+                            <a href="javascript:;" onclick="document.getElementById('signout').submit();">Sign out</a>
+                        </form>
                     </li>
                     <li>
                         <a href="">Account</a>
