Update radio buttons for roles

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -128,6 +128,18 @@
                 <div class="popup-close" id="registration-close" onclick="closeRegistrationForm()">&times;</div>
                 <form action="/api/auth/signup" class="form" method="post" id="signup-form">
                     <h1>Sign up</h1>
+                    <div class="element-role">
+                        <input type="radio" name="select" id="role-tutor" checked>
+                        <input type="radio" name="select" id="role-student">
+                        <label for="role-tutor" class="option role-tutor">
+                            <div class="dot"></div>
+                            <span>Tutor</span>
+                        </label>
+                        <label for="role-student" class="option role-student">
+                            <div class="dot"></div>
+                            <span>Student</span>
+                        </label>
+                    </div>
                     <div class="element-name">
                         <div class="fname">
                             <label for="text">First Name</label>
