--- a/src/main/resources/static/css/popup.css
+++ b/src/main/resources/static/css/popup.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 .popup-overlay {
     position: fixed;
     top: 0px;
@@ -248,11 +248,11 @@ body.showRegistrationForm .popup-registration {
 
 .popup-registration {
     position: absolute;
-    top: -150%;
+    top: -200%;
     left: 50%;
     /* transform: translate(-50%, -50%) scale(1. 15); */
     width: 420px;
-    height: 480px;
+    height: 560px;
     background: #fefefe;
     z-index: 2;
     opacity: 0;
@@ -299,7 +299,8 @@ body.showRegistrationForm .popup-registration {
     flex: 49%;
 }
 
-.popup-registration .form label {
+.popup-registration .form .element label,
+.popup-registration .form .element-name label {
     display: block;
     text-align: left;
     left: 10px;
@@ -340,4 +341,75 @@ body.showRegistrationForm .popup-registration {
     font-size: 15px;
     text-align: center;
     cursor: pointer;
+}
+
+/* role selector */
+.element-role{
+    display: inline-flex;
+    background: #fefefe;
+    margin-top: 10px;
+    width: 100%;
+    height: 75%;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 0 15px;
+}
+.element-role .option{
+    background: #fefefe;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin: 0 10px;
+    border-radius: 50px;
+    cursor: pointer;
+    padding: 0 10px;
+    border: 2px solid lightgrey;
+    transition: all 0.3s ease;
+}
+.element-role .option .dot{
+    height: 20px;
+    width: 20px;
+    background: lightgrey;
+    border-radius: 50%;
+    position: relative;
+}
+.element-role .option .dot::before{
+    position: absolute;
+    content: "";
+    top: 4px;
+    left: 4px;
+    width: 12px;
+    height: 12px;
+    background: #4169e1;
+    border-radius: 50%;
+    opacity: 0;
+    transform: scale(1.5);
+    transition: all 0.3s ease;
+}
+input[type="radio"]{
+    display: none;
+}
+#role-tutor:checked:checked ~ .role-tutor,
+#role-student:checked:checked ~ .role-student{
+    border-color: #4169e1;
+    background: #4169e1;
+}
+#role-tutor:checked:checked ~ .role-tutor .dot,
+#role-student:checked:checked ~ .role-student .dot{
+    background: #fefefe;
+}
+#role-tutor:checked:checked ~ .role-tutor .dot::before,
+#role-student:checked:checked ~ .role-student .dot::before{
+    opacity: 1;
+    transform: scale(1);
+}
+.element-role .option span{
+    font-size: 20px;
+    color: #808080;
+}
+#role-tutor:checked:checked ~ .role-tutor span,
+#role-student:checked:checked ~ .role-student span{
+    color: #fefefe;
 }
