Add role radio buttons in signup popup

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -129,8 +129,8 @@
                 <form action="/api/auth/signup" class="form" method="post" id="signup-form">
                     <h1>Sign up</h1>
                     <div class="element-role">
-                        <input type="radio" name="select" id="role-tutor" checked>
-                        <input type="radio" name="select" id="role-student">
+                        <input type="radio" name="role" id="role-tutor" value="tutor" checked>
+                        <input type="radio" name="role" id="role-student" value="student">
                         <label for="role-tutor" class="option role-tutor">
                             <div class="dot"></div>
                             <span>Tutor</span>
