--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <header>
-            <div class="logo"><a th:href="@{/}" class="active">Find My Tutor</a></div>
+            <div class="logo"><a th:href="@{/}">Find My Tutor</a></div>
             <div class="hamburger">
                 <div class="line"></div>
                 <div class="line"></div>
@@ -34,7 +34,7 @@
                         </form>
                     </li>
                     <li>
-                        <a href="">Account</a>
+                        <a th:href="@{/account}">Account</a>
                     </li>
                 </ul>
             </nav>
